# space

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
data/: archetypes.json  controls.json
data/models/: torus.gltf
data/models/asteroid/: asteroid.blend  asteroid.gltf
data/shaders/: envmap.frag  envmap.vert  hud.frag  hud.vert  pbr.frag  pbr.vert
src/: CMakeLists.txt
src/space/: .#world.cpp  CMakeLists.txt  debrisentity.cpp  debrisentity.h  physics.cpp  physics.h  shipentity.cpp  shipentity.h  space.cpp  world.cpp  world.h
